Fix button color and add media query for body overflow

--- a/src/components/Atoms/Button/_Button.scss
+++ b/src/components/Atoms/Button/_Button.scss
@@ -10,7 +10,7 @@
     color: black!important;
         &.secondary {
         background-color: $black;
-        color: white;
+        color: white!important;
         &:hover {
             background-color: $primary;
             color: $black;
