--- a/src/components/Molecules/Navbar/_Navbar.scss
+++ b/src/components/Molecules/Navbar/_Navbar.scss
@@ -17,7 +17,6 @@
 @media screen and (max-width: 768px) {
     .navbar {
         width: calc(100% - $m32*2);
-        background: $background;
     }
 
 }
