--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -65,3 +65,10 @@ button{
 	background-color: transparent;
 	cursor: pointer;
 }
+
+
+@media only screen and (max-width: 768px) {
+    body {
+        overflow: -webkit-scrollbars-none;
+    }
+}
